styles/style.css
body { 
    height: 100%;
    margin:5px;
    background: url(https://res.cloudinary.com/scrumpylungs/image/upload/v1588618270/freeCodeCamp%20Survey%20Form/stage-view_bfh01n.jpg) no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
}

#title {
    color: #f7dda9;
    text-align: center;
    font-family: 'Megrim', cursive;
    font-size: 3rem;
    margin: 20px 0 -20px 0;
}

#description {
    color: rgb(217, 218, 252);
    text-align: center;
    font-family: 'Poiret One', cursive;
    font-size: 1.5rem;
}

#survey-form {
    background-color: rgba(0, 0, 0, 0.7);
    display: block;
    margin: 1rem auto;
    width: 85%;
    max-width: 600px;
    padding: 15px;
    border: solid 2px rgb(175, 134, 57);
    border-radius: 5px;
    line-height: 1.6rem;
}

label {
    color: #f7dda9;
    font-family: 'Barlow Condensed', sans-serif;
    font-size: 1.3rem;
}

.text-input {
    box-sizing:border-box;
    width: 100%;
    display: block;
    margin: auto;
    border-radius: 5px;
    height: 2em;
    font-family: 'Barlow Condensed', sans-serif;
    font-size: 1rem;
    color: rgb(71, 67, 67);
}

select {
    box-sizing:border-box;
    margin: 20px 0 20px 0;
    border-radius: 5px;
    height: 2em;
    font-family: 'Barlow Condensed', sans-serif;
    font-size: 1rem;
    color: rgb(71, 67, 67);
    width: 100%;

}

option {
    font-family: 'Barlow Condensed', sans-serif;
    font-size: 1rem;
    color: rgb(71, 67, 67);
}

textarea {
    width: 100%;
    display: block;
    margin: auto;
    height: 3rem;
    font-family: 'Barlow Condensed', sans-serif;
    font-size: 1.1rem;
    color: rgb(71, 67, 67);
    margin-top: 10px;
}

#submit {
    display: block;
    margin: auto;
    width: fit-content;
    margin-top: 40px;
    padding: 10px 30px 10px 30px;
    background-color: #f7dda9;
    border: outset black 2px;
    border-radius: 5px;
    background-image: linear-gradient(145deg, rgb(199, 147, 50), #caa965);
    font-size: 1.5rem;
    color: black;
    font-family: 'Barlow Condensed', sans-serif;
    text-align: center;

}

p {
    color: #f7dda9;
    font-family: 'Barlow Condensed', sans-serif;
    font-size: 1.3rem;
    margin: 0 0 0.5rem 0;
}


/*Desktop Font Sizing*/

@media (min-width: 1024px) {

    html {
        font-size: 1.03vw;
    }

    #title {
        font-size: 4rem;
        margin: 20px;
    }
    
    #description {
        font-size: 2rem;
        margin: 20px 0 40px 0;
    }

    

    #survey-form {
        padding: 25px;
    }

    #submit {
        font-size: 1.9rem;
    }

}

/* Tablet Sizing */
@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px) {

    html {
        font-size: 1.15rem;
    }


}

